# elkjop-report-app

./: .gitignore  CHANGELOG.md  ICON_FIX_NOTES.md  LICENSE  README.md  UPDATE_SYSTEM.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
electron/: main.js  preload.js
electron/database/: db.js
electron/handlers/: pdfHandler.js  updateHandler.js
electron/templates/: reportTemplate.js
electron/utils/: chartUtils.js  dateUtils.js
scripts/: copy-chromium.js  copy-data.js  postinstall.js  publish-update.js  update-version.js
src/: App.tsx  electron.d.ts  index.css  main.tsx  store.ts  tauriSave.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs-access.json
src-tauri/src/: lib.rs  main.rs
src/components/: AVSSection.tsx  BudgetYearPicker.tsx  BudgetYearSettings.tsx  CompactAVSSection.tsx  CompactDaySummary.tsx  CompactInsuranceSection.tsx  CompactLayout.tsx  CompactRepairSection.tsx  CompactTVSection.tsx  DarkModeToggle.tsx  DayReportCard.tsx  DaySummary.tsx  ErrorBoundary.tsx  GMCalculatorExample.tsx  GoalProgress.tsx  HiddenReports.tsx  ImagePreviewModal.tsx  Layout.tsx  LoadingScreen.tsx  MissingDataChecker.tsx  Modal.tsx  PDFReport.tsx  PersonSelect.tsx  PreklargjortTVSection.tsx  RepairTicketsSection.tsx  ReportButtons.tsx  ResetLoadingScreen.tsx  ServiceSelect.tsx  SettingsAboutTab.tsx  SettingsBackupTab.tsx  SettingsDataTab.tsx  SettingsDisplayTab.tsx  SettingsGoalsTab.tsx  SettingsModal.tsx  SettingsNotificationsTab.tsx  SettingsPeopleTab.tsx  SettingsReportTab.tsx  (+8 more)
(+35 files in other folders)
