[package]
name = "elkjop-report-app"
version = "1.6.1"
description = "A Tauri App"
authors = ["Christoffer Madsen"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.0", features = [] }
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta.9"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
